# OpenSecAI

./: .env.example  .gitignore  Makefile  README.md  build.sh  main.py  pyproject.toml  setup.sh
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  index.css  mockData.ts  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
desktop/src/api/: client.ts  normalize.ts
desktop/src/components/: Icon.tsx  Logo.tsx
desktop/src/components/shell/: LeftRail.tsx
desktop/src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  SeverityBadge.tsx  StatusPill.tsx
desktop/src/notifications/: NotificationContext.tsx  types.ts
desktop/src/pages/: AgentRunHistoryPage.tsx  CreateProjectPage.tsx  DashboardPage.tsx  LandingPage.tsx  LogViewerPage.tsx  ResultsPage.tsx  RunHistoryPage.tsx
opensecai/agents/dep_scan/: contracts.py  runner.py
opensecai/api/: __main__.py  app.py  ws.py
opensecai/api/routes/: agents.py  jobs.py  projects.py  settings.py
opensecai/core/: paths.py
opensecai/languages/: base.py  go.py  nodejs.py  registry.py
opensecai/runtime/: agent_registry.py  event_bus.py  job_runner.py  notification_contracts.py  pause_manager.py
opensecai/schemas/: diff.py  job.py
opensecai/storage/: jobs.py  projects.py  settings.py
scripts/: export_schemas.py
