[project]
name = "opensecai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "polars>=1.0.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
opensecai = "main:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
