[project]
name = "opensecai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.115",
    "filelock>=3.29.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "polars>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "pyinstaller>=6.20.0",
]

# One script entry per agent — all share this single pyproject.toml / uv.lock.
# Add a new line here when a new agent runner is created.
[project.scripts]
opensecai          = "opensecai.agents.dep_scan.runner:main"
opensecai-dep-scan = "opensecai.agents.dep_scan.runner:main"
opensecai-api      = "opensecai.api.__main__:main"

[tool.uv]
package = true

# Auto-discover every subpackage under opensecai/ so new agents are picked up
# without touching this file.
[tool.setuptools.packages.find]
where   = ["."]
include = ["opensecai*"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["opensecai", "main.py"]
pythonVersion = "3.13"
