[package]
name = "opensecai"
version = "1.0.0"
description = "OpenSecAI Desktop App"
authors = []
license = ""
repository = ""
default-run = "opensecai"
edition = "2021"

[lib]
name = "opensecai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "opensecai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
ctrlc = { version = "3", features = ["termination"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
